# MedAgenticSage

./: .gitignore  README.md  pyproject.toml
backend/agents/: api.py  graph.py  ingestion.py  memory.py  nodes.py  templates.py
backend/db/: api.py
backend/llm/: api.py
backend/llm/loaders/: anthropic_loader.py  groq_loader.py  huggingface_loader.py  ollama_loader.py  openai_loader.py  together_loader.py
backend/prompts/: templates.py
backend/vector_db/: clients.py
configs/: __init__.py  models.yaml  settings.yaml
frontend/: main.py  streamlit_app.py
frontend/utils/: api.py  css_markdowns.py
notebooks/: 0_setup_environment.ipynb  1_symptom_checker.ipynb  2_ehr_summarizer.ipynb  3_literature_qa.ipynb  4_drug_interaction_checker.ipynb  5_treatment_planner.ipynb  6_agentic_orchestration.ipynb  7_context_memory_and_retrieval.ipynb  8_code_modularization.ipynb  8_combined_healthcare_agent.ipynb
