[project]
name = "medagenticsage"
version = "0.1.0"
description = "An autonomous AI agent system for healthcare using LangGraph, Streamlit, and LLMs."
authors = [
    { name = "Sunny Raj", email = "mail.sunnyraj94@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

[tool.setuptools.packages.find]
where = ["."]  # Search from the project root
include = [
    "backend*",
    "frontend*",
    "configs*",
]
exclude = [
    "data*",
    "assets*",
    "notebooks*",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


dependencies = [
    "streamlit>=1.20.0",
    "langgraph>=0.1.0",
    "openai>=1.3.8",
    "chromadb>=0.4.24",
    "faiss-cpu>=1.7.4",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "transformers>=4.37.0",
    "together>=0.2.0",
    "anthropic>=0.2.5",
    "groq>=0.4.0",
    "langchain>=0.0.280",
    "sentence-transformers>=2.2.2",
    "accelerate>=0.21.0",
    "torch>=2.0.0",
    "PyYAML>=6.0",
    "ollama",
    "langchain-ollama",
    "biopython",
]
